--- a/app/src/main/res/layout/activity_rec_msn.xml
+++ b/app/src/main/res/layout/activity_rec_msn.xml
@@ -25,6 +25,13 @@
         <ListView
             android:id="@+id/lvrecMsn"
             android:layout_width="match_parent"
-            android:layout_height="419dp" />
+            android:layout_height="358dp" />
+
+        <Button
+            android:id="@+id/btnSA"
+            android:layout_width="227dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="SALIR" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
